<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olfaction_msgs</name>
  <version>0.0.0</version>
  <description>Definition of msg related to artificial olfaction: Anemometers, PID, gas-sensor, gas-sensors-array, etc.</description>
  <maintainer email="jgmonroy@uma.es">Javier Monroy</maintainer>
  <maintainer email="andresgongora@uma.es">Andres Gongora</maintainer>
  <license>GPLv3</license>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  # TO ADD MSG/SRV
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
